--- a/graduation-system/app/src/main/resources/templates/reviews/details.html
+++ b/graduation-system/app/src/main/resources/templates/reviews/details.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Review Details</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <h1>Review Details</h1>
