--- a/graduation-system/app/src/main/resources/templates/reviews/student-reviews.html
+++ b/graduation-system/app/src/main/resources/templates/reviews/student-reviews.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Student Reviews</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <h1>Reviews for <span th:text="${student.name}"></span></h1>
