--- a/graduation-system/app/src/main/resources/templates/header.html
+++ b/graduation-system/app/src/main/resources/templates/header.html
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="/students">Students</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/diploma-assignments">Diploma Assignments</a>
+                        <a class="nav-link" href="/diploma-assignments/user">My Diploma Assignments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/reviews">Reviews</a>
